# timebox-api

./: Cargo.toml
migrations/2022-07-07-110756_create_items/: down.sql  up.sql
src/: auth.rs  main.rs
src/database/: mod.rs  mysql.rs  schema.rs
src/models/: item.rs  mod.rs  user.rs
src/routes/: index.rs  mod.rs  settings.rs  test.rs
src/routes/auth/: login.rs  signup.rs
